--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
                 
             } catch (error) {
                 console.error('Error obteniendo datos del clima:', error);
-                document.getElementById('weatherDesc').textContent = 'Error al cargar datos';
+                document.getElementById('weatherDesc').textContent = 'Info clima, intermitente.';
                 document.getElementById('weatherTemp').textContent = '--°C';
                 document.getElementById('weatherFeelsLike').textContent = 'Sensación: --°C';
                 document.getElementById('weatherIcon').textContent = '☀️';
@@ -2658,6 +2658,7 @@
     </script>
 </body>
 </html>
+
 
 
 
