--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
                 document.getElementById('weatherDesc').textContent = 'Info clima, intermitente.';
                 document.getElementById('weatherTemp').textContent = '--°C';
                 document.getElementById('weatherFeelsLike').textContent = 'Sensación: --°C';
-                document.getElementById('weatherIcon').textContent = '☀️';
+                document.getElementById('weatherIcon').textContent = '🌎';
                 document.getElementById('weatherSources').textContent = 'Error al consultar VisualCrossing';
             } finally {
                 document.getElementById('weatherWidget').classList.remove('loading');
@@ -1410,7 +1410,7 @@
         document.getElementById('weatherDesc').textContent = 'Error al cargar';
         document.getElementById('weatherTemp').textContent = '--°C';
         document.getElementById('weatherFeelsLike').textContent = 'Sensación: --°C';
-        document.getElementById('weatherIcon').textContent = '☀️';
+        document.getElementById('weatherIcon').textContent = '🌎';
         document.getElementById('weatherSources').textContent = 'Error en VisualCrossing';
         return;
     }
@@ -2658,6 +2658,7 @@
     </script>
 </body>
 </html>
+
 
 
 
