--- a/index.html
+++ b/index.html
@@ -921,8 +921,8 @@
                 <div class="dashboard-tabs">
                     <div class="dashboard-tab active" data-tab="laps">Vueltas</div>
                     <div class="dashboard-tab" data-tab="metrics">Data</div>
-                    <div class="dashboard-tab" data-tab="performance">Global</div>
-                    <div class="dashboard-tab" data-tab="vehicleManagement">Gestión</div>
+                    <div class="dashboard-tab" data-tab="performance">G</div>
+                    <div class="dashboard-tab" data-tab="vehicleManagement">E</div>
                 </div>
                 
                 <div class="dashboard-content active" id="lapsContent">
@@ -2747,3 +2747,4 @@
 </html>
 
                
+
