--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@ function mapVisualCrossingIconToEmoji(iconName) {
         'clear-day': '☀️',
         'clear-night': '🌙',
         'partly-cloudy-day': '🌤️',
-        'partly-cloudy-night': '🌙☁️',
+        'partly-cloudy-night': '🌙',
         'cloudy': '☁️',
         'rain': '🌧️',
         'snow': '❄️',
@@ -2766,4 +2766,5 @@ function mapVisualCrossingIconToEmoji(iconName) {
     </script>
 </body>
 </html>
+
 
