--- a/login.html
+++ b/login.html
@@ -286,6 +286,9 @@
                     <option value="Movil2">Móvil 2</option>
                     <option value="Movil3">Móvil 3</option>
                     <option value="Movil4">Móvil 4</option>
+                    <option value="Movil4">Móvil 5</option>
+                    <option value="Movil4">Móvil 6</option>
+                    
                     <option value="Admin">Admin</option>
                 </select>
                 <div class="selected-user-status" id="selectedUserStatus">
@@ -359,6 +362,8 @@
             "Movil2": "movil2@gpsacciona.com", 
             "Movil3": "movil3@gpsacciona.com",
             "Movil4": "movil4@gpsacciona.com",
+            "Movil5": "movil5@gpsacciona.com",
+            "Movil6": "movil6@gpsacciona.com",
             "Funcionarios": "funcionarios@gpsacciona.com",
             "Admin": "admin@acciona.com"
         };
@@ -654,3 +659,4 @@
     </script>
 </body>
 </html>
+
