--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,36 @@
                     <div class="vehicle-distance" id="movil4-distance">
                         <span>Distancia:</span>
                         <span class="distance-indicator">--</span>
+                     </div>
+                </div>
+                    <div class="vehicle-card">
+                       <div class="vehicle-name">
+                          <div id="movil5-icon" class="vehicle-icon offline"></div>
+                          <span id="movil5-name">Móvil 5</span>
                     </div>
+                    <div class="vehicle-status">
+                        <span>Estado:</span>
+                        <span id="movil5-status" class="offline">Desconectado</span>
+                    </div>
+                    <div class="vehicle-distance" id="movil5-distance">
+                        <span>Distancia:</span>
+                        <span class="distance-indicator">--</span>
+                    </div>
+                </div>
+
+                   <div class="vehicle-card">
+                     <div class="vehicle-name">
+                       <div id="movil6-icon" class="vehicle-icon offline"></div>
+                       <span id="movil6-name">Móvil 6</span>
+                   </div>
+                   <div class="vehicle-status">
+                        <span>Estado:</span>
+                        <span id="movil6-status" class="offline">Desconectado</span>
+                   </div>
+                   <div class="vehicle-distance" id="movil6-distance">
+                      <span>Distancia:</span>
+                      <span class="distance-indicator">--</span>
+   
                 </div>
             </div>
             
@@ -2831,6 +2860,7 @@
     </script>
 </body>
 </html>
+
 
 
 
