--- a/index.html
+++ b/index.html
@@ -1750,14 +1750,14 @@
                 document.getElementById('downloadExcelBtn').style.display = 'flex';
             }
             
-            if (isViewer || currentUserId === 'Funcionarios') {
+                if (isViewer || currentUserId === 'Funcionarios' || currentUserId === 'Admin') {
                 document.getElementById('other-vehicles-container').style.display = 'block';
                 updateVehicleNamesInUI();
                 initializeAllMarkers();
-                startMonitoring();
+               startMonitoring(); // ✅ Ahora también para Admin
             } else {
-                initializeCurrentUserMarker();
-                startGPSTracking(currentUserId);
+               initializeCurrentUserMarker();
+               startGPSTracking(currentUserId);
             }
             
             document.getElementById('weatherWidget').addEventListener('click', toggleWeatherWidget);
@@ -2813,3 +2813,4 @@
     </script>
 </body>
 </html>
+
