--- a/login.html
+++ b/login.html
@@ -118,25 +118,28 @@
         .password-container {
             position: relative;
         }
-        .toggle-password {
-            position: absolute;
-            right: 12px;
-            top: 28%;
-            transform: translateY(-50%);
-            background: none;
-            border: none;
-            cursor: pointer;
-            color: #666;
-            font-size: 18px;
-            padding: 5px;
-            width: 30px;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 4px;
-            transition: all 0.2s;
-        }
+       .toggle-password {
+    position: absolute;
+    right: 12px;
+    top: 28%; 
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #666;
+    font-size: 18px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    transition: background-color 0.2s ease;
+    line-height: 1;
+    min-width: 30px;
+    text-align: center;
+}
         .toggle-password:hover {
             background-color: rgba(0,0,0,0.05);
         }
@@ -710,6 +713,7 @@
     </script>
 </body>
 </html>
+
 
 
 
