--- a/login.html
+++ b/login.html
@@ -407,7 +407,7 @@
             
             if (passwordInput.type === 'password') {
                 passwordInput.type = 'text';
-                toggleButton.textContent = '🔒';
+                toggleButton.textContent = '👁️';
             } else {
                 passwordInput.type = 'password';
                 toggleButton.textContent = '👁️';
@@ -713,6 +713,7 @@
     </script>
 </body>
 </html>
+
 
 
 
